--- a/mignardises/index.html
+++ b/mignardises/index.html
@@ -97,6 +97,16 @@
   </div>
 </section>
 
+
+  <div class="container" style="padding-bottom: 50px;">
+    <div class="row">
+      <div class="col-12">
+        <p class="h4b" style="text-align: center;">Les mignardises sont disponibles à la commande à partir de 15 pièces par variété, pour un total de minimum 100 pièces.</p>
+      </div>
+    </div>
+  </div>
+
+
 <section class="section pt-0">
   <div class="container">
     <div class="row">
